# rauthy_controller

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  devenv.nix  index.yaml
.github/workflows/: ci.yaml  docker-dev.yaml  docker-release.yaml  helm-release.yaml
charts/rauthy-controller/: Chart.yaml  values.yaml
charts/rauthy-controller-crds/: Chart.yaml  values.yaml
charts/rauthy-controller-crds/templates/: crd-oidcclients.yaml  crd.yaml
charts/rauthy-controller/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  serviceaccount.yaml
examples/: oidcclient-test.yaml  oidcclient.yaml
src/: controller.rs  crdgen.rs  lib.rs  main.rs  rauthy.rs
