[package]
name = "rauthy_controller"
version = "0.1.0"
edition = "2024"
default-run = "controller"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
futures = "0.3.32"
jiff = "0.2.24"
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = { version = "3.1.0", default-features = false, features = ["config", "runtime", "client", "derive", "unstable-runtime", "rustls-tls", "aws-lc-rs"] }
reqwest = { version = "0.13.2", features = ["json"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
